--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="style.css">
-
-    <title>Art Center - Advanced Interactive Prototyping</title>
+    <title>Document</title>
 </head>
-<head>Hello, World</head>
 <body>
+    <header>
+        <h1>Project briefs for Advanced Interactive Prototyping</h1>
+    </header>
+    <main>
+        <h2>Project 1 - Representation</h2>
+        <p></p>
+        <h2>"What Do Prototypes Prototype" Reading</h2>
+        <p>The underlying purpose of any interface is control. User's wishes mapped onto the system's capabilities. This project focuses on the structure of this mapping, from the micro-scale (a single point of interaction), to medium - feature list, layout, to macro - modularity and customization. We'll explor micro-interactions, contextual controls, gestalt principles in interface design and the underlying system capabilities that could afford a set of interface options.</p>
+    </main>
+<footer></footer>
+
+</body>
+</html>
