--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <header>
-        <h1>Project briefs for Advanced Interactive Prototyping</h1>
+        <h1>Isabel's Advance Interactive Prototyping Class</h1>
     </header>
     <main>
-        <h2>Project 1 - Representation</h2>
+        <h2>Project #1 - Representation</h2>
+        
+        <h2>Reading #1 - "What Do Prototypes Prototype" </h2>
         <p></p>
-        <h2>"What Do Prototypes Prototype" Reading</h2>
-        <p>The underlying purpose of any interface is control. User's wishes mapped onto the system's capabilities. This project focuses on the structure of this mapping, from the micro-scale (a single point of interaction), to medium - feature list, layout, to macro - modularity and customization. We'll explor micro-interactions, contextual controls, gestalt principles in interface design and the underlying system capabilities that could afford a set of interface options.</p>
     </main>
 <footer></footer>
 
