--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <h2>Project #1 - Representation</h2>
         
-        <h2>Reading #1 - "What Do Prototypes Prototype" </h2>
+        <!-- <h2>Reading #1 - "What Do Prototypes Prototype" </h2> -->
         <p></p>
     </main>
 <footer></footer>
