--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-        <h1>Isabel's Advance Interactive Prototyping Class</h1>
+        <h1>Welcom to Isabel's Blog!</h1>
     </header>
     <main>
         <h2>Project #1 - Representation</h2>
         
-        <!-- <h2>Reading #1 - "What Do Prototypes Prototype" </h2> -->
+        <h2>Reading #1 - "What Do Prototypes Prototype" </h2>
         <p></p>
     </main>
 <footer></footer>
