--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
         <h1>Welcom to Isabel's Blog!</h1>
     </header>
     <main>
-        <h2>Project #1 - Representation</h2>
+        <h2>Project 1 - Representation</h2>
+        <a href="Project1.html"><button type="button">View</button></a>
+        <h2>Project 2 - Control</h2>
+        <button type="button">View</button>
+        <h2>Project 3 - Communication</h2>
+        <button type="button">View</button>
+        <h2>Project 4 - Exploration</h2>
+        <button type="button">View</button>
         
         <h2>Reading #1 - "What Do Prototypes Prototype" </h2>
         <p></p>
