--- a/Reading.html
+++ b/Reading.html
@@ -133,7 +133,7 @@
 
         <div class="container">
             <div class="box">
-                <h1 padding-bottom-30>Reading 1 - What do Prototypes Prototype?</h1>
+                <h1>Reading 1 - What do Prototypes Prototype?</h1>
                 <p>quotes are here</p>
             </div>
 
