--- a/Project4.html
+++ b/Project4.html
@@ -119,11 +119,11 @@
         <header class="sticky-top py-1 nav_header">
             <nav class="headercontainer d-flex flex-column flex-md-row justify-content-between">
               <a class="name d-none d-md-inline-block" href="index.html">Home</a>
-              <a class="name d-none d-md-inline-block" href="project1.html">Project 1</a>
-              <a class="name d-none d-md-inline-block" href="project2.html">Project 2</a>
-              <a class="name d-none d-md-inline-block" href="project3.html">Project 3</a>
-              <a class="name d-none d-md-inline-block" href="project4.html">Project 4</a>
-              <a class="name d-none d-md-inline-block" href="reading.html">Reading</a>
+              <a class="name d-none d-md-inline-block" href="Project1.html">Project 1</a>
+              <a class="name d-none d-md-inline-block" href="Project2.html">Project 2</a>
+              <a class="name d-none d-md-inline-block" href="Project3.html">Project 3</a>
+              <a class="name d-none d-md-inline-block" href="Project4.html">Project 4</a>
+              <a class="name d-none d-md-inline-block" href="Reading.html">Reading</a>
             </nav>
         </header>
     <main>
