--- a/Reading.html
+++ b/Reading.html
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="box">
                 <h1>Reading 1 - What do Prototypes Prototype?</h1>
-                <p>quotes are here</p>
+                <p> are here</p>
             </div>
 
             </div> 
