--- a/Reading.html
+++ b/Reading.html
@@ -134,7 +134,13 @@
         <div class="container">
             <div class="box">
                 <h1>Reading 1 - What do Prototypes Prototype?</h1>
-                <p> are here</p>
+                <p>Assignment: Read Stephanie Houde and Charles Hill, What do Prototypes Prototype?</p>
+                <h2>Quote #1 : "What is a prototype?"</h2>
+                <p>From the reading, I've learned that the term “prototype” is likely to be ambiguous for different types of designers, and everyone has a different expectation of what a prototype is. For example, even though from my knowledge that interaction designers always collaborate with programmers, the word "prototype" 's definition is still different for them. Interaction designers think that it is a simulation of on-screen appearance and behavior, while programmers refer it as a test program.</p>
+                <h2>Quote #2 : "What is significant is not what media or tools were are used to create them, but how they are used by a designer to explore or demonstrate some aspect of the future artifact."</h2>
+                <p>A prototype is successful when it satisfied the goal of "helping viewer better understand a product", therefore, what is important is the idea behind the prototype and helping designers to convey that idea to the audience, instead of focusing on how the prototype is made.</p>
+                <h2>Quote #3 : "The necessary resolution and fidelity of a prototype may depend most on the nature of its audience."</h2>
+                <p>"Knowing who the adience are" is very important for prototypes because different audience may require a different resolution and fiedelity prototype. A design team might be able to understand an interactive storyboard easily, comparing to members of the supporting organization, where they might require higher-resolution / fidelity representations.</p>
             </div>
 
             </div> 
