--- a/project4.html
+++ b/project4.html
@@ -55,6 +55,7 @@ https://templatemo.com/tm-535-softy-pinko
                             <li><a href="project2.html">Project 2</a></li>
                             <li><a href="project3.html">Project 3</a></li>
                             <li><a href="project4.html" class="active">Project 4</a></li>
+                            <li><a href="Readings.html">Readings</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
