--- a/project2.html
+++ b/project2.html
@@ -156,7 +156,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="row">
                     <div class="offset-lg-3 col-lg-6">
                         <div class="info">
-                            <h1>Potentiometer and Button into Code</h1>
+                            <h1>Potentiometer and Button</h1>
                         </div>
                     </div>
                 </div>
@@ -174,7 +174,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-1"></div>
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">Potentiometer changes Pattern Size</h2>
+                        <h2 class="section-title">Potentiometer Changes Pattern Size</h2>
                     </div>
                     <div class="left-text">
                         <p>When the Potentiometer on the board is turned clock wise, the size of the pattern will get bigger, when the Potentiometer is turned counter-clock wise, the pattern will get smaller.</p>
@@ -200,10 +200,10 @@ https://templatemo.com/tm-535-softy-pinko
                     <div class="col-lg-1"></div>
                     <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
                         <div class="left-heading">
-                            <h2 class="section-title">Button changes Background Color</h2>
+                            <h2 class="section-title">Button Changes Display Color</h2>
                         </div>
                         <div class="left-text">
-                            <p>When the button on the board is pressed, the background will change to white, when the button is released, it will change bavk to dark grey.</p>
+                            <p>As the button on the board is pressed, the Hue, Saturation, and Brightness of the rotating circle will change randomly</p>
                         </div>
                     </div>
                 </div>
@@ -215,31 +215,40 @@ https://templatemo.com/tm-535-softy-pinko
             </div>
         </section>
         <!-- ***** Features Big Item End ***** -->
-        <!-- ***** Features Big Item Start ***** -->
-        <section class="section padding-top-70 padding-bottom-0" id="features">
+    <!-- ***** Box Start ***** -->
+    <section class="mini" id="work-process">
+        <div class="mini-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <img src="assets/images/color wave.png" class="rounded img-fluid d-block mx-auto" alt="App">                    </div>
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
-                        <div class="left-heading">
-                            <h2 class="section-title">Color Rotation</h2>
+                    <div class="offset-lg-3 col-lg-6">
+                        <div class="info">
+                            <h1>Putting the system into a Box</h1>
                         </div>
-                        <div class="left-text">
-                            <p>There are 6 shades of blue rotating in the circular pattern</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="hr"></div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- ***** Features Big Item End ***** -->
-    
+        </div>
+    </section>
+    <!-- ***** Box End ***** -->
+    <!-- ***** Box View Start ***** -->
+    <section class="section padding-top-70 padding-bottom-0" id="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                    <img src="assets/images/1.png" class="rounded img-fluid d-block mx-auto" alt="App">
+                    <img src="assets/images/2.png" class="rounded img-fluid d-block mx-auto" alt="App"> 
+                </div>
+                <div class="col-lg-1"></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="hr"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ***** Box View End ***** -->
+        
     <!-- ***** Video Start ***** -->
     <section class="mini" id="work-process">
         <div class="mini-content">
