--- a/project2.html
+++ b/project2.html
@@ -235,10 +235,18 @@ https://templatemo.com/tm-535-softy-pinko
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="assets/images/1.png" class="rounded img-fluid d-block mx-auto" alt="App">
-                    <img src="assets/images/2.png" class="rounded img-fluid d-block mx-auto" alt="App"> 
+                    <img src="assets/images/one.png" class="rounded img-fluid d-block mx-auto" alt="App">
+                    <img src="assets/images/two.png" class="rounded img-fluid d-block mx-auto" alt="App"> 
                 </div>
                 <div class="col-lg-1"></div>
+                <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
+                    <div class="left-heading">
+                        <h2 class="section-title">Button Changes Display Color</h2>
+                    </div>
+                    <div class="left-text">
+                        <p>As the button on the board is pressed, the Hue, Saturation, and Brightness of the rotating circle will change randomly</p>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
