--- a/project2.html
+++ b/project2.html
@@ -169,7 +169,7 @@ https://templatemo.com/tm-535-softy-pinko
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="assets/images/change size.png" class="rounded img-fluid d-block mx-auto" alt="App"> 
+                    <img src="assets/images/change pattern size.png" class="rounded img-fluid d-block mx-auto" alt="App"> 
                </div>
                 <div class="col-lg-1"></div>
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
@@ -195,7 +195,7 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <img src="assets/images/bg change.png" class="rounded img-fluid d-block mx-auto" alt="App"> 
+                        <img src="assets/images/change display color.png" class="rounded img-fluid d-block mx-auto" alt="App"> 
                    </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
@@ -234,19 +234,19 @@ https://templatemo.com/tm-535-softy-pinko
     <section class="section padding-top-70 padding-bottom-0" id="features">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="assets/images/one.png" class="rounded img-fluid d-block mx-auto" alt="App">
-                    <img src="assets/images/two.png" class="rounded img-fluid d-block mx-auto" alt="App"> 
+                <div class="col-lg-3 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                    <img src="assets/images/2.jpg" class="rounded img-fluid d-block mx-auto" alt="App">
+                </div>
+                <div class="col-lg-3 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                    <img src="assets/images/1.jpg" class="rounded img-fluid d-block mx-auto" alt="App"> 
+                </div>
+                <div class="col-lg-3 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                    <img src="assets/images/3.jpg" class="rounded img-fluid d-block mx-auto" alt="App"> 
+                </div>
+                <div class="col-lg-3 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                    <img src="assets/images/4.jpg" class="rounded img-fluid d-block mx-auto" alt="App"> 
                 </div>
                 <div class="col-lg-1"></div>
-                <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
-                    <div class="left-heading">
-                        <h2 class="section-title">Button Changes Display Color</h2>
-                    </div>
-                    <div class="left-text">
-                        <p>As the button on the board is pressed, the Hue, Saturation, and Brightness of the rotating circle will change randomly</p>
-                    </div>
-                </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
@@ -266,7 +266,7 @@ https://templatemo.com/tm-535-softy-pinko
                         <div class="info">
                             <h1>System Prototype</h1>
                             <p>Finally, here is a prototype of my <strong>Project 2 - Control</strong></p>
-                            <video width="600" controls=""><source src="assets/images/pattern.mp4" type="video/mp4"></video>
+                            <video width="600" controls=""><source src="assets/images/Project 2 Final.mp4" type="video/mp4"></video>
                         </div>
                     </div>
                 </div>
