--- a/Readings.html
+++ b/Readings.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="row">
                     <div class="left-heading">
                         <h2 class="section-title">Reading #1</h2>
-                        <p class="section-title2">Assignment: Read Stephanie Houde and Charles Hill, What do Prototypes Prototype?</p>
+                        <p class="section-title2">Assignment: Stephanie Houde and Charles Hill, What do Prototypes Prototype?</p>
                         <p class="section-title">Quote #1 : "What is a prototype?"</p>
                         <p class="section-paragraph">From the reading, I've learned that the term “prototype” is likely to be ambiguous for different types of designers, and everyone has a different expectation of what a prototype is. For example, even though from my knowledge that interaction designers always collaborate with programmers, the word "prototype" 's definition is still different for them. Interaction designers think that it is a simulation of on-screen appearance and behavior, while programmers refer it as a test program.</p>
                         <p class="section-title">Quote #2 : "What is significant is not what media or tools were are used to create them, but how they are used by a designer to explore or demonstrate some aspect of the future artifact."</p>
@@ -117,7 +117,7 @@ https://templatemo.com/tm-535-softy-pinko
         <div class="row">
                 <div class="left-heading">
                     <h2 class="section-title">Reading #2</h2>
-                    <p class="section-title2">Assignment: Read Programming Design Systems</p>
+                    <p class="section-title2">Assignment: Programming Design Systems</p>
                     <p class="section-title">Quote #1 : "No matter where you go, you are surrounded by systems."</p>
                     <p class="section-paragraph">The first sentence from the article, "No matter where you go, you are surrounded by systems." states that the world is made up of a system, which a system could be as simple as a clock, or as complex as the internet, made up of millions of web networks, everything is closely tied with a system.</p>
                     <p class="section-title">Quote #2 : "Design systems offer a different way of thinking."</p>
@@ -135,6 +135,29 @@ https://templatemo.com/tm-535-softy-pinko
 </section>
 <!-- ***** Reading 2 End ***** -->
 
+<!-- ***** Reading 3 Start ***** -->
+<section class="section padding-top-70 padding-bottom-0" id="features">
+    <div class="container">
+        <div class="row">
+                <div class="left-heading">
+                    <h2 class="section-title">Reading #3</h2>
+                    <p class="section-title2">Assignment: The internet of things</p>
+                    <p class="section-title">Quote #1 : "I prefer to see it for what it is: the colonization of everyday life by information processing."</p>
+                    <p class="section-paragraph">A few sentences into the article, the author explains the internet of things. I just thought it is interesting to see how our teachnology and society are evolved in such a great speed, having the internet of things and data communication embed and distribute through our entire environment.</p>
+                    <p class="section-title">Quote #2 : “Like the smartphone, the internet of things isn’t a single technology“</p>
+                    <p class="section-paragraph">The internet of things isn't a single technology made for one single purposes, instead, it is made up with various devices, services, etc, all for the sake of disciplinary convinience that was fit in our everyday circumstance to the network for analysis and response.</p>
+                    <p class="section-title">Quote #3 : "Each of these scales of activity illuminates a different aspect of the challenge presented to us by the internet of things, and each of them has something distinct to teach us."</p>
+                    <p class="section-paragraph">The author gave examples on the capabilities of "The Internet of Things", as he stated "Quantified Self", "The Smart Home", and even "The Smart City", presenting the IoT to us in diverse ways, as each of them has something distinct to teach us.</p>
+                </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="hr"></div>
+                        </div>
+                    </div>
+        </div>
+    </div>
+</section>
+<!-- ***** Reading 3 End ***** -->
     
 
 
